5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1734_2505.log
== TEST (2019-05-14 18:03:30) 
-- CODE:
from math import factorial
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:03:38) 
-- CODE:
from math import factorial
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:05:15) 
-- CODE:
from math import factorial
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:05:38) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+4
print(round(senx,8))
-- OUTPUT:
0.27886813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:05:56) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+4
print(round(senx,8))
-- OUTPUT:
0.27886813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:15) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,8))
-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:25) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=3
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:48) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:58) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=2
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
3.09281337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:08) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=4
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
3.09281337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:20) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=5
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:29) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=6
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
1.57079633
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:37) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=10
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))
-- OUTPUT:
1.57079633
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:08:33) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=4
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- OUTPUT:
3.0928133742
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:46) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=
while(c<=k):
	senx=x-((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- ERROR:
File "XXXX", line 5
    c=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:51) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<=k):
	senx=x-((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- OUTPUT:
3.4834193567
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:08) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- OUTPUT:
-0.3418267031
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:17) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- OUTPUT:
-0.3418267031
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:52) 
-- CODE:
from factorial import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<=k):
	senx=x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from factorial import*
ModuleNotFoundError: No module named 'factorial'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:27:44) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=angulo
c=1
while(c<k):
	senx= fsenx +((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    senx=angulo
NameError: name 'angulo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:28:51) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<k):
	senx= fsenx +((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= fsenx +((-1)**c)*(x**c)/c
NameError: name 'fsenx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:29:12) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
senx=x
c=1
while(c<k):
	senx=senx +((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,10))
-- OUTPUT:
1.4637894025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:57:04) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
soma=0
c=0
while(c<k):
	sinal=(-1)**c
	soma=soma+sinal*((x**b)/factorial(b))
	c=c+1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma=soma+sinal*((x**b)/factorial(b))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:57:40) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
soma=0
c=0
while(c<k):
	sinal=(-1)**c
	soma=soma + sinal*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma=soma + sinal*((x**b)/factorial(b))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:58:52) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
soma=0
c=0
while(c<k):
	sinal=(-1)**c
	soma=soma + sinal* ((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma=soma + sinal* ((x**b)/factorial(b))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:59:12) 
-- CODE:
from math import*
x=eval(input("angulo:"))
k=int(input("numero em series:"))
soma=0
c=0
b=1
while(c<k):
	sinal=(-1)**c
	soma=soma + sinal* ((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(soma,10))
-- EXECUTION TIME:
0.191415
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
